--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -195,7 +195,7 @@
         bottom: 145px;
 
         @media only screen and (max-width: 1024px) {
-          overflow: auto;
+          overflow: hidden;
           top: 90px;
           bottom: 230px;
 
